// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listbox should render properly 1`] = `
.emotion-7 [data-reach-listbox-input][data-state="expanded"] {
  border-radius: 2px 2px 0 0;
}

.emotion-0 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-5 {
  background-color: #808080;
  border: none;
  padding: 0;
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  overflow: hidden;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-5:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-3 {
  padding: 4px;
}

.emotion-2 {
  width: 100%;
  padding: 12px 8px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  border: 2px solid transparent;
}

.emotion-2:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-4 {
  margin: 0;
  overflow: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label
  className="emotion-7"
>
  <div
    className="emotion-0"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-6"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-1"
    >
      Select Type
    </ListboxButton>
    <ListboxPopover
      className="emotion-5"
    >
      <div
        className="emotion-3"
      >
        <input
          aria-label="Filter options"
          className="emotion-2"
          onChange={[Function]}
          type="search"
          value=""
        />
      </div>
      <ListboxList
        className="emotion-4"
      >
        <ListboxOptions
          nestedCount={0}
          options={
            Object {
              "analysis": Object {
                "zvi": Object {
                  "tinyProxy": "analysis.zvi.tinyProxy",
                },
              },
              "clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "system": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
        />
      </ListboxList>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly 2`] = `
.emotion-7 [data-reach-listbox-input][data-state="expanded"] {
  border-radius: 2px 2px 0 0;
}

.emotion-0 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-5 {
  background-color: #808080;
  border: none;
  padding: 0;
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  overflow: hidden;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-5:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-3 {
  padding: 4px;
}

.emotion-2 {
  width: 100%;
  padding: 12px 8px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  border: 2px solid transparent;
}

.emotion-2:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-4 {
  padding: 8px;
}

<label
  className="emotion-7"
>
  <div
    className="emotion-0"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-6"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-1"
    >
      Select Type
    </ListboxButton>
    <ListboxPopover
      className="emotion-5"
    >
      <div
        className="emotion-3"
      >
        <input
          aria-label="Filter options"
          className="emotion-2"
          onChange={[Function]}
          type="search"
          value="qwerty"
        />
      </div>
      <div
        className="emotion-4"
      >
        No Results
      </div>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly 3`] = `
.emotion-7 [data-reach-listbox-input][data-state="expanded"] {
  border-radius: 2px 2px 0 0;
}

.emotion-0 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-5 {
  background-color: #808080;
  border: none;
  padding: 0;
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  overflow: hidden;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-5:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-3 {
  padding: 4px;
}

.emotion-2 {
  width: 100%;
  padding: 12px 8px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  border: 2px solid transparent;
}

.emotion-2:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-4 {
  margin: 0;
  overflow: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label
  className="emotion-7"
>
  <div
    className="emotion-0"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-6"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-1"
    >
      Select Type
    </ListboxButton>
    <ListboxPopover
      className="emotion-5"
    >
      <div
        className="emotion-3"
      >
        <input
          aria-label="Filter options"
          className="emotion-2"
          onChange={[Function]}
          type="search"
          value="time"
        />
      </div>
      <ListboxList
        className="emotion-4"
      >
        <ListboxOptions
          nestedCount={0}
          options={
            Object {
              "clip": Object {
                "timeline": "clip.timeline",
              },
            }
          }
        />
      </ListboxList>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly 4`] = `
.emotion-7 [data-reach-listbox-input][data-state="expanded"] {
  border-radius: 2px 2px 0 0;
}

.emotion-0 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-5 {
  background-color: #808080;
  border: none;
  padding: 0;
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  overflow: hidden;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-5:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-3 {
  padding: 4px;
}

.emotion-2 {
  width: 100%;
  padding: 12px 8px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  border: 2px solid transparent;
}

.emotion-2:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-4 {
  margin: 0;
  overflow: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label
  className="emotion-7"
>
  <div
    className="emotion-0"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-6"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-1"
    >
      Select Type
    </ListboxButton>
    <ListboxPopover
      className="emotion-5"
    >
      <div
        className="emotion-3"
      >
        <input
          aria-label="Filter options"
          className="emotion-2"
          onChange={[Function]}
          type="search"
          value="time"
        />
      </div>
      <ListboxList
        className="emotion-4"
      >
        <ListboxOptions
          nestedCount={0}
          options={
            Object {
              "clip": Object {
                "timeline": "clip.timeline",
              },
            }
          }
        />
      </ListboxList>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly with existing attribute 1`] = `
.emotion-7 [data-reach-listbox-input][data-state="expanded"] {
  border-radius: 2px 2px 0 0;
}

.emotion-0 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-5 {
  background-color: #808080;
  border: none;
  padding: 0;
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  overflow: hidden;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-5:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-3 {
  padding: 4px;
}

.emotion-2 {
  width: 100%;
  padding: 12px 8px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  border: 2px solid transparent;
}

.emotion-2:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-4 {
  margin: 0;
  overflow: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label
  className="emotion-7"
>
  <div
    className="emotion-0"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-6"
    defaultValue="clip.timeline"
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-1"
    >
      timeline
    </ListboxButton>
    <ListboxPopover
      className="emotion-5"
    >
      <div
        className="emotion-3"
      >
        <input
          aria-label="Filter options"
          className="emotion-2"
          onChange={[Function]}
          type="search"
          value=""
        />
      </div>
      <ListboxList
        className="emotion-4"
      >
        <ListboxOptions
          nestedCount={0}
          options={
            Object {
              "analysis": Object {
                "zvi": Object {
                  "tinyProxy": "analysis.zvi.tinyProxy",
                },
              },
              "clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "system": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
        />
      </ListboxList>
    </ListboxPopover>
  </ListboxInput>
</label>
`;
